--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,4 +21,9 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 20MB
-      enabled: true
+  cache:
+    type: redis
+  data:
+    redis:
+      port: 6674
+      host: localhost
