--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: "JAVA CI"
+name: 'JAVA CI'
 
 on:
   pull_request:
@@ -8,29 +8,29 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest ]
-        java: [ 11, 17 ]
+        os: [ubuntu-latest, windows-latest]
+        java: [17]
 
     runs-on: ${{matrix.os}}
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup JDK
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          java-version: ${{matrix.java}}
           distribution: 'temurin'
+          java-version: ${{matrix.java}}
 
       - name: Cache Maven packages
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.m2/repository
-          key: ${{runner.os}}-maven-${{hashFiles('**/pom.xml')}}
+          key: ${{matrix.os}}-maven-${{hashFiles('**/pom.xml')}}
           restore-keys: |
-            ${{runner.os}}-maven-
+            ${{matrix.os}}-maven-
 
-      - name: Maven build
+      - name: Maven Build
         env:
           DB_URL: ${{secrets.DB_URL_DEV_ENV}}
           DB_USERNAME: ${{secrets.DB_USERNAME_DEV_ENV}}
@@ -40,11 +40,9 @@ jobs:
           CLOUDINARY_API_SECRET: ${{secrets.CLOUDINARY_API_SECRET}}
         run: mvn --batch-mode --fail-at-end clean install
 
-      - name: Upload JAR
-        if: success() #Onle upload if build success
+      - name: Upload file JAR
         uses: actions/upload-artifact@v4
+        if: success() #Only upload if maven build success
         with:
           name: app-jar
           path: target/*.jar
-
-
