--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,7 +2,10 @@ name: 'JAVA CI'
 
 on:
   pull_request:
-    branches: [main]
+    branches:
+      - main
+#  schedule:
+#    - '0 12 * * *' #auto execute at 12 a.m
 
 jobs:
   build:
