--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DB_URL}
+    url: ${DB_URL:jdbc:mysql://localhost:3306/user_travel_v1}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
   jpa:
