--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,14 +2,14 @@ name: 'JAVA CI'
 
 on:
   pull_request:
-    branches: [main]
+    branches: [ main ]
 #  schedule:
 #    - '0 12 * * *' #auto execute at 12 a.m
 jobs:
   build:
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest ]
+        os: [ ubuntu-latest ]
         java: [ 17 ]
 
     timeout-minutes: 15 #15mins to cancel, dont' crack
