--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${DB_URL:jdbc:mysql://localhost:3306/user_travel_v1}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    username: test
+    password: 123456
   jpa:
     hibernate:
       ddl-auto: update
